--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "brace": "^0.11.1",
     "preact": "^8.1.0",
+    "preact-compat": "^3.18.4",
+    "react-ace": "^6.4.0",
     "tiny-atom": "^4.2.0"
   },
   "devDependencies": {
