--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "standard": "^11.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
+    "webpack-bundle-analyzer": "^3.2.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   }
